--- a/manifest.yml
+++ b/manifest.yml
@@ -1,10 +1,10 @@
 applications:
-- name: watson-ibm-fest
-  host: watson-ibm-fest
+- name:
+  host:
   path: .
   command: npm start
   memory: 512M
   services:
-  - visual-recognition
+  -
   env:
     NODE_ENV: production
